samples/_failures_safe/1761730634_8f9a97_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_429cbb4c.c: In function ‘main’:
./samples/SAFE/__tmp_429cbb4c.c:163:5: error: expected declaration or statement at end of input
  163 |     free(transitions);
      |     ^~~~
